generate tables for knn and svm

--- a/work2/notebooks/1.0-ZachParent-explore_results.ipynb
+++ b/work2/notebooks/1.0-ZachParent-explore_results.ipynb
@@ -18,14 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn_results_hepatitis = pd.read_csv(\"../data/results/knn_results_hepatitis.csv\")\n",
-    "knn_results_mushroom = pd.read_csv(\"../data/results/knn_results_mushroom.csv\")\n",
-    "knn_reduction_results_hepatitis = pd.read_csv(\n",
-    "    \"../data/results/knn_reduction_results_hepatitis.csv\"\n",
-    ")\n",
-    "knn_reduction_results_mushroom = pd.read_csv(\"../data/results/knn_reduction_results_mushroom.csv\")\n",
-    "svm_results_hepatitis = pd.read_csv(\"../data/results/svm_results_hepatitis.csv\")\n",
-    "svm_results_mushroom = pd.read_csv(\"../data/results/svm_results_mushroom.csv\")"
+    "knn_results_hepatitis = pd.read_csv(\"../data/results/knn_hepatitis.csv\")\n",
+    "knn_results_mushroom = pd.read_csv(\"../data/results/knn_mushroom.csv\")\n",
+    "knn_reduction_results_hepatitis = pd.read_csv(\"../data/results/knn_reduction_hepatitis.csv\")\n",
+    "knn_reduction_results_mushroom = pd.read_csv(\"../data/results/knn_reduction_mushroom.csv\")\n",
+    "svm_results_hepatitis = pd.read_csv(\"../data/results/svm_hepatitis.csv\")\n",
+    "svm_results_mushroom = pd.read_csv(\"../data/results/svm_mushroom.csv\")"
    ]
   },
   {
@@ -35,18 +33,268 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>kernel_type</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>TP</th>\n",
+       "      <th>TN</th>\n",
+       "      <th>FP</th>\n",
+       "      <th>FN</th>\n",
+       "      <th>train_time</th>\n",
+       "      <th>test_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.883871</td>\n",
+       "      <td>0.927419</td>\n",
+       "      <td>115</td>\n",
+       "      <td>22</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.010283</td>\n",
+       "      <td>0.003882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>poly</td>\n",
+       "      <td>0.948387</td>\n",
+       "      <td>0.967742</td>\n",
+       "      <td>120</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.008304</td>\n",
+       "      <td>0.003387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.903226</td>\n",
+       "      <td>0.941176</td>\n",
+       "      <td>120</td>\n",
+       "      <td>20</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.008350</td>\n",
+       "      <td>0.003631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>sigmoid</td>\n",
+       "      <td>0.787097</td>\n",
+       "      <td>0.879121</td>\n",
+       "      <td>120</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.008358</td>\n",
+       "      <td>0.003405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.890323</td>\n",
+       "      <td>0.929461</td>\n",
+       "      <td>112</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.008021</td>\n",
+       "      <td>0.003251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>poly</td>\n",
+       "      <td>0.948387</td>\n",
+       "      <td>0.967480</td>\n",
+       "      <td>119</td>\n",
+       "      <td>28</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.008472</td>\n",
+       "      <td>0.003323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.948387</td>\n",
+       "      <td>0.968000</td>\n",
+       "      <td>121</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.008762</td>\n",
+       "      <td>0.003708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>sigmoid</td>\n",
+       "      <td>0.754839</td>\n",
+       "      <td>0.850394</td>\n",
+       "      <td>108</td>\n",
+       "      <td>9</td>\n",
+       "      <td>23</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.008630</td>\n",
+       "      <td>0.003468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.877419</td>\n",
+       "      <td>0.921162</td>\n",
+       "      <td>111</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.008704</td>\n",
+       "      <td>0.003262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>poly</td>\n",
+       "      <td>0.948387</td>\n",
+       "      <td>0.967213</td>\n",
+       "      <td>118</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.008400</td>\n",
+       "      <td>0.003330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.948387</td>\n",
+       "      <td>0.968000</td>\n",
+       "      <td>121</td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.008531</td>\n",
+       "      <td>0.003532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5</td>\n",
+       "      <td>sigmoid</td>\n",
+       "      <td>0.735484</td>\n",
+       "      <td>0.837945</td>\n",
+       "      <td>106</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.008267</td>\n",
+       "      <td>0.003296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>7</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.864516</td>\n",
+       "      <td>0.912134</td>\n",
+       "      <td>109</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.009201</td>\n",
+       "      <td>0.003270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>7</td>\n",
+       "      <td>poly</td>\n",
+       "      <td>0.948387</td>\n",
+       "      <td>0.967213</td>\n",
+       "      <td>118</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.008391</td>\n",
+       "      <td>0.003359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>7</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.954839</td>\n",
+       "      <td>0.971888</td>\n",
+       "      <td>121</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.008448</td>\n",
+       "      <td>0.003527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>7</td>\n",
+       "      <td>sigmoid</td>\n",
+       "      <td>0.722581</td>\n",
+       "      <td>0.828685</td>\n",
+       "      <td>104</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.008351</td>\n",
+       "      <td>0.003284</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "k                       108\n",
-       "distance                108\n",
-       "voting                  108\n",
-       "weighting               108\n",
-       "accuracy                108\n",
-       "precision               108\n",
-       "recall                  108\n",
-       "f1                      108\n",
-       "efficiency              108\n",
-       "problem-solving time    108\n",
-       "dtype: int64"
+       "    C kernel_type  accuracy        f1   TP  TN  FP  FN  train_time  test_time\n",
+       "0   1      linear  0.883871  0.927419  115  22  10   8    0.010283   0.003882\n",
+       "1   1        poly  0.948387  0.967742  120  27   5   3    0.008304   0.003387\n",
+       "2   1         rbf  0.903226  0.941176  120  20  12   3    0.008350   0.003631\n",
+       "3   1     sigmoid  0.787097  0.879121  120   2  30   3    0.008358   0.003405\n",
+       "4   3      linear  0.890323  0.929461  112  26   6  11    0.008021   0.003251\n",
+       "5   3        poly  0.948387  0.967480  119  28   4   4    0.008472   0.003323\n",
+       "6   3         rbf  0.948387  0.968000  121  26   6   2    0.008762   0.003708\n",
+       "7   3     sigmoid  0.754839  0.850394  108   9  23  15    0.008630   0.003468\n",
+       "8   5      linear  0.877419  0.921162  111  25   7  12    0.008704   0.003262\n",
+       "9   5        poly  0.948387  0.967213  118  29   3   5    0.008400   0.003330\n",
+       "10  5         rbf  0.948387  0.968000  121  26   6   2    0.008531   0.003532\n",
+       "11  5     sigmoid  0.735484  0.837945  106   8  24  17    0.008267   0.003296\n",
+       "12  7      linear  0.864516  0.912134  109  25   7  14    0.009201   0.003270\n",
+       "13  7        poly  0.948387  0.967213  118  29   3   5    0.008391   0.003359\n",
+       "14  7         rbf  0.954839  0.971888  121  27   5   2    0.008448   0.003527\n",
+       "15  7     sigmoid  0.722581  0.828685  104   8  24  19    0.008351   0.003284"
       ]
      },
      "execution_count": 3,
@@ -55,7 +303,7 @@
     }
    ],
    "source": [
-    "knn_results_hepatitis.count()"
+    "svm_results_hepatitis"
    ]
   },
   {
@@ -64,16 +312,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latex_table = (\n",
-    "    knn_results_hepatitis.sort_values(by=\"f1\", ascending=False)\n",
-    "    .reset_index(drop=True)\n",
-    "    .assign(**{\"rank\": lambda x: x.index + 1})\n",
-    "    [[\"rank\", \"k\", \"distance\", \"voting\", \"weighting\", \"accuracy\", \"f1\"]]\n",
-    "    .head(10)\n",
-    "    .to_latex(index=False, float_format=\"{:0.4f}\".format, caption=\"Results from KNN models for the hepatitis dataset\")\n",
+    "def write_latex_table(df, columns, filename, caption, sort_by=\"f1\"):\n",
+    "    latex_table = (\n",
+    "        df.sort_values(by=sort_by, ascending=False)\n",
+    "        .reset_index(drop=True)\n",
+    "        .assign(**{\"\": lambda x: x.index + 1})\n",
+    "        .loc[:, [\"\"] + columns]\n",
+    "        .head(10)\n",
+    "        .rename(columns=lambda x: x.replace(\"_\", \" \"))\n",
+    "        .to_latex(\n",
+    "            index=False, float_format=\"{:0.4f}\".format, caption=caption, label=f\"tab:{filename}\"\n",
+    "        )\n",
+    "    )\n",
+    "    with open(f\"../reports/tables/{filename}.tex\", \"w\") as f:\n",
+    "        f.write(latex_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_columns = [\"k\", \"distance_func\", \"voting_func\", \"weighting_func\", \"accuracy\", \"f1\"]\n",
+    "svm_columns = [\"C\", \"kernel_type\", \"accuracy\", \"f1\"]\n",
+    "# reduction_knn_columns = [\"k\", \"distance\", \"voting\", \"weighting\", \"accuracy\", \"f1\"]\n",
+    "\n",
+    "write_latex_table(\n",
+    "    knn_results_hepatitis,\n",
+    "    knn_columns,\n",
+    "    \"knn_results_hepatitis\",\n",
+    "    \"Results from KNN models for the hepatitis dataset\",\n",
     ")\n",
-    "with open(\"../reports/tables/knn_results_hepatitis.tex\", \"w\") as f:\n",
-    "    f.write(latex_table)"
+    "write_latex_table(\n",
+    "    knn_results_mushroom,\n",
+    "    knn_columns,\n",
+    "    \"knn_results_mushroom\",\n",
+    "    \"Results from KNN models for the mushroom dataset\",\n",
+    ")\n",
+    "write_latex_table(\n",
+    "    svm_results_hepatitis,\n",
+    "    svm_columns,\n",
+    "    \"svm_results_hepatitis\",\n",
+    "    \"Results from SVM models for the hepatitis dataset\",\n",
+    ")\n",
+    "write_latex_table(\n",
+    "    svm_results_mushroom,\n",
+    "    svm_columns,\n",
+    "    \"svm_results_mushroom\",\n",
+    "    \"Results from SVM models for the mushroom dataset\",\n",
+    ")\n",
+    "# write_latex_table(knn_reduction_results_hepatitis, \"knn_reduction_results_hepatitis\", \"Results from KNN models for the hepatitis dataset with dimensionality reduction\")\n",
+    "# write_latex_table(knn_reduction_results_mushroom, \"knn_reduction_results_mushroom\", \"Results from KNN models for the mushroom dataset with dimensionality reduction\")"
    ]
   }
  ],
