--- a/work2/reports/04-results-and-analysis/04.1-results.tex
+++ b/work2/reports/04-results-and-analysis/04.1-results.tex
@@ -10,4 +10,7 @@ Here, present the findings of the study. Include relevant data, statistics, and 
 % TODO: Organize results in a logical order, possibly mirroring the order of the methods
 
 % Add more content here as needed
+\input{tables/knn_results_mushroom.tex}
 \input{tables/knn_results_hepatitis.tex}
+\input{tables/svm_results_mushroom.tex}
+\input{tables/svm_results_hepatitis.tex}
