--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -3,6 +3,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{booktabs}
 \usepackage{array}
+\usepackage{hyperref}
 
 % TODO: Add any additional packages needed for the report
 % TODO: Consider adding a table of contents with \tableofcontents
