--- a/work2/reports/tables/knn_results_hepatitis.tex
+++ b/work2/reports/tables/knn_results_hepatitis.tex
@@ -1,19 +1,20 @@
 \begin{table}
 \caption{Results from KNN models for the hepatitis dataset}
+\label{tab:knn_results_hepatitis}
 \begin{tabular}{rrlllrr}
 \toprule
-rank & k & distance & voting & weighting & accuracy & f1 \\
+ & k & distance func & voting func & weighting func & accuracy & f1 \\
 \midrule
-1 & 1 & ChebyshevDistance & MajorityClassVote & ReliefFWeighting & 0.8082 & 0.5207 \\
-2 & 1 & ChebyshevDistance & ShepardsWorkVote & EqualWeighting & 0.8082 & 0.5207 \\
-3 & 1 & ChebyshevDistance & InverseDistanceWeightedVote & ReliefFWeighting & 0.8082 & 0.5207 \\
-4 & 1 & ChebyshevDistance & InverseDistanceWeightedVote & EqualWeighting & 0.8082 & 0.5207 \\
-5 & 1 & ChebyshevDistance & ShepardsWorkVote & ReliefFWeighting & 0.8082 & 0.5207 \\
-6 & 1 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.8082 & 0.5207 \\
-7 & 5 & ChebyshevDistance & MajorityClassVote & InformationGainWeighting & 0.7993 & 0.4768 \\
-8 & 1 & ManhattanDistance & ShepardsWorkVote & InformationGainWeighting & 0.7997 & 0.4689 \\
-9 & 1 & ManhattanDistance & ShepardsWorkVote & ReliefFWeighting & 0.7997 & 0.4689 \\
-10 & 1 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.7997 & 0.4689 \\
+1 & 1 & EuclideanDistance & ShepardsWorkVote & ReliefFWeighting & 0.9548 & 0.9717 \\
+2 & 1 & EuclideanDistance & InverseDistanceWeightedVote & ReliefFWeighting & 0.9548 & 0.9717 \\
+3 & 1 & EuclideanDistance & MajorityClassVote & ReliefFWeighting & 0.9548 & 0.9717 \\
+4 & 1 & ChebyshevDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9685 \\
+5 & 1 & ChebyshevDistance & InverseDistanceWeightedVote & EqualWeighting & 0.9484 & 0.9685 \\
+6 & 1 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.9484 & 0.9685 \\
+7 & 7 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9677 \\
+8 & 5 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9677 \\
+9 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.9484 & 0.9675 \\
+10 & 7 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9675 \\
 \bottomrule
 \end{tabular}
 \end{table}
