output tables for knn reduction too

--- a/work2/notebooks/1.0-ZachParent-explore_results.ipynb
+++ b/work2/notebooks/1.0-ZachParent-explore_results.ipynb
@@ -336,7 +336,7 @@
    "source": [
     "knn_columns = [\"k\", \"distance_func\", \"voting_func\", \"weighting_func\", \"accuracy\", \"f1\"]\n",
     "svm_columns = [\"C\", \"kernel_type\", \"accuracy\", \"f1\"]\n",
-    "# reduction_knn_columns = [\"k\", \"distance\", \"voting\", \"weighting\", \"accuracy\", \"f1\"]\n",
+    "reduction_knn_columns = [\"k\", \"reduction_func\", \"accuracy\", \"f1\", \"train_time\", \"test_time\", \"storage\"]\n",
     "\n",
     "write_latex_table(\n",
     "    knn_results_hepatitis,\n",
@@ -362,8 +362,18 @@
     "    \"svm_results_mushroom\",\n",
     "    \"Results from SVM models for the mushroom dataset\",\n",
     ")\n",
-    "# write_latex_table(knn_reduction_results_hepatitis, \"knn_reduction_results_hepatitis\", \"Results from KNN models for the hepatitis dataset with dimensionality reduction\")\n",
-    "# write_latex_table(knn_reduction_results_mushroom, \"knn_reduction_results_mushroom\", \"Results from KNN models for the mushroom dataset with dimensionality reduction\")"
+    "write_latex_table(\n",
+    "    knn_reduction_results_hepatitis,\n",
+    "    reduction_knn_columns,\n",
+    "    \"knn_reduction_results_hepatitis\",\n",
+    "    \"Results from KNN models for the hepatitis dataset with dimensionality reduction\",\n",
+    ")\n",
+    "write_latex_table(\n",
+    "    knn_reduction_results_mushroom,\n",
+    "    reduction_knn_columns,\n",
+    "    \"knn_reduction_results_mushroom\",\n",
+    "    \"Results from KNN models for the mushroom dataset with dimensionality reduction\",\n",
+    ")\n"
    ]
   }
  ],
