--- a/work2/notebooks/1.0-ZachParent-explore_results.ipynb
+++ b/work2/notebooks/1.0-ZachParent-explore_results.ipynb
@@ -313,17 +313,26 @@
    "outputs": [],
    "source": [
     "def write_latex_table(df, columns, filename, caption, sort_by=\"f1\"):\n",
-    "    latex_table = (\n",
+    "    df = (\n",
     "        df.sort_values(by=sort_by, ascending=False)\n",
     "        .reset_index(drop=True)\n",
     "        .assign(**{\"\": lambda x: x.index + 1})\n",
     "        .loc[:, [\"\"] + columns]\n",
     "        .head(10)\n",
     "        .rename(columns=lambda x: x.replace(\"_\", \" \"))\n",
-    "        .to_latex(\n",
-    "            index=False, float_format=\"{:0.4f}\".format, caption=caption, label=f\"tab:{filename}\"\n",
-    "        )\n",
     "    )\n",
+    "    s = df.style\n",
+    "    # s.clear()\n",
+    "    s.table_styles = []\n",
+    "    s.caption = caption\n",
+    "    s.label = f\"tab:{filename}\"\n",
+    "    s.format(\n",
+    "        precision=3,\n",
+    "    )\n",
+    "    latex_table = s.to_latex(position_float=\"centering\",\n",
+    "                             multicol_align=\"|c|\",\n",
+    "                             hrules=True,\n",
+    "                             )\n",
     "    with open(f\"../reports/tables/{filename}.tex\", \"w\") as f:\n",
     "        f.write(latex_table)"
    ]
@@ -336,7 +345,15 @@
    "source": [
     "knn_columns = [\"k\", \"distance_func\", \"voting_func\", \"weighting_func\", \"accuracy\", \"f1\"]\n",
     "svm_columns = [\"C\", \"kernel_type\", \"accuracy\", \"f1\"]\n",
-    "reduction_knn_columns = [\"k\", \"reduction_func\", \"accuracy\", \"f1\", \"train_time\", \"test_time\", \"storage\"]\n",
+    "reduction_knn_columns = [\n",
+    "    \"k\",\n",
+    "    \"reduction_func\",\n",
+    "    \"accuracy\",\n",
+    "    \"f1\",\n",
+    "    \"train_time\",\n",
+    "    \"test_time\",\n",
+    "    \"storage\",\n",
+    "]\n",
     "\n",
     "write_latex_table(\n",
     "    knn_results_hepatitis,\n",
@@ -373,7 +390,7 @@
     "    reduction_knn_columns,\n",
     "    \"knn_reduction_results_mushroom\",\n",
     "    \"Results from KNN models for the mushroom dataset with dimensionality reduction\",\n",
-    ")\n"
+    ")"
    ]
   }
  ],
