--- a/work2/reports/tables/svm_results_mushroom.tex
+++ b/work2/reports/tables/svm_results_mushroom.tex
@@ -1,20 +1,20 @@
 \begin{table}
+\centering
 \caption{Results from SVM models for the mushroom dataset}
-\label{tab:svm_results_mushroom}
-\begin{tabular}{rrlrr}
+\begin{tabular}{lrrlrr}
 \toprule
- & C & kernel type & accuracy & f1 \\
+ &  & C & kernel type & accuracy & f1 \\
 \midrule
-1 & 1 & poly & 0.9280 & 0.9276 \\
-2 & 7 & rbf & 0.9260 & 0.9261 \\
-3 & 5 & rbf & 0.9250 & 0.9246 \\
-4 & 3 & rbf & 0.9240 & 0.9235 \\
-5 & 7 & poly & 0.9200 & 0.9200 \\
-6 & 5 & poly & 0.9160 & 0.9158 \\
-7 & 3 & poly & 0.9160 & 0.9155 \\
-8 & 3 & linear & 0.9140 & 0.9124 \\
-9 & 1 & linear & 0.9110 & 0.9098 \\
-10 & 1 & rbf & 0.9060 & 0.9019 \\
+0 & 1 & 1 & poly & 0.928 & 0.928 \\
+1 & 2 & 7 & rbf & 0.926 & 0.926 \\
+2 & 3 & 5 & rbf & 0.925 & 0.925 \\
+3 & 4 & 3 & rbf & 0.924 & 0.924 \\
+4 & 5 & 7 & poly & 0.920 & 0.920 \\
+5 & 6 & 5 & poly & 0.916 & 0.916 \\
+6 & 7 & 3 & poly & 0.916 & 0.915 \\
+7 & 8 & 3 & linear & 0.914 & 0.912 \\
+8 & 9 & 1 & linear & 0.911 & 0.910 \\
+9 & 10 & 1 & rbf & 0.906 & 0.902 \\
 \bottomrule
 \end{tabular}
 \end{table}
