--- a/work2/reports/tables/knn_reduction_results_hepatitis.tex
+++ b/work2/reports/tables/knn_reduction_results_hepatitis.tex
@@ -1,14 +1,14 @@
 \begin{table}
+\centering
 \caption{Results from KNN models for the hepatitis dataset with dimensionality reduction}
-\label{tab:knn_reduction_results_hepatitis}
-\begin{tabular}{rrlrrrrr}
+\begin{tabular}{lrrlrrrrr}
 \toprule
- & k & reduction func & accuracy & f1 & train time & test time & storage \\
+ &  & k & reduction func & accuracy & f1 & train time & test time & storage \\
 \midrule
-1 & 1 & control & 0.9484 & 0.9675 & 0.0008 & 0.0704 & 1395 \\
-2 & 1 & enn & 0.9484 & 0.9675 & 0.0004 & 0.0722 & 1395 \\
-3 & 1 & drop2 & 0.9484 & 0.9675 & 0.0005 & 0.0730 & 1395 \\
-4 & 1 & cnn & 0.8774 & 0.9212 & 0.0004 & 0.0209 & 409 \\
+0 & 1 & 1 & control & 0.948 & 0.967 & 0.001 & 0.070 & 1395 \\
+1 & 2 & 1 & enn & 0.948 & 0.967 & 0.000 & 0.072 & 1395 \\
+2 & 3 & 1 & drop2 & 0.948 & 0.967 & 0.000 & 0.073 & 1395 \\
+3 & 4 & 1 & cnn & 0.877 & 0.921 & 0.000 & 0.021 & 409 \\
 \bottomrule
 \end{tabular}
 \end{table}
