--- a/work2/reports/tables/knn_reduction_results_mushroom.tex
+++ b/work2/reports/tables/knn_reduction_results_mushroom.tex
@@ -1,14 +1,14 @@
 \begin{table}
+\centering
 \caption{Results from KNN models for the mushroom dataset with dimensionality reduction}
-\label{tab:knn_reduction_results_mushroom}
-\begin{tabular}{rrlrrrrr}
+\begin{tabular}{lrrlrrrrr}
 \toprule
- & k & reduction func & accuracy & f1 & train time & test time & storage \\
+ &  & k & reduction func & accuracy & f1 & train time & test time & storage \\
 \midrule
-1 & 1 & control & 0.9500 & 0.9509 & 0.0003 & 0.2551 & 1000 \\
-2 & 1 & enn & 0.9500 & 0.9509 & 0.0003 & 0.2554 & 1000 \\
-3 & 1 & drop2 & 0.9500 & 0.9509 & 0.0003 & 0.2572 & 1000 \\
-4 & 1 & cnn & 0.9250 & 0.9289 & 0.0003 & 0.0654 & 189 \\
+0 & 1 & 1 & control & 0.950 & 0.951 & 0.000 & 0.255 & 1000 \\
+1 & 2 & 1 & enn & 0.950 & 0.951 & 0.000 & 0.255 & 1000 \\
+2 & 3 & 1 & drop2 & 0.950 & 0.951 & 0.000 & 0.257 & 1000 \\
+3 & 4 & 1 & cnn & 0.925 & 0.929 & 0.000 & 0.065 & 189 \\
 \bottomrule
 \end{tabular}
 \end{table}
