--- a/work2/reports/tables/knn_results_hepatitis.tex
+++ b/work2/reports/tables/knn_results_hepatitis.tex
@@ -1,20 +1,20 @@
 \begin{table}
+\centering
 \caption{Results from KNN models for the hepatitis dataset}
-\label{tab:knn_results_hepatitis}
-\begin{tabular}{rrlllrr}
+\begin{tabular}{lrrlllrr}
 \toprule
- & k & distance func & voting func & weighting func & accuracy & f1 \\
+ &  & k & distance func & voting func & weighting func & accuracy & f1 \\
 \midrule
-1 & 1 & EuclideanDistance & ShepardsWorkVote & ReliefFWeighting & 0.9548 & 0.9717 \\
-2 & 1 & EuclideanDistance & InverseDistanceWeightedVote & ReliefFWeighting & 0.9548 & 0.9717 \\
-3 & 1 & EuclideanDistance & MajorityClassVote & ReliefFWeighting & 0.9548 & 0.9717 \\
-4 & 1 & ChebyshevDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9685 \\
-5 & 1 & ChebyshevDistance & InverseDistanceWeightedVote & EqualWeighting & 0.9484 & 0.9685 \\
-6 & 1 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.9484 & 0.9685 \\
-7 & 7 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9677 \\
-8 & 5 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9677 \\
-9 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.9484 & 0.9675 \\
-10 & 7 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.9484 & 0.9675 \\
+0 & 1 & 1 & EuclideanDistance & ShepardsWorkVote & ReliefFWeighting & 0.955 & 0.972 \\
+1 & 2 & 1 & EuclideanDistance & InverseDistanceWeightedVote & ReliefFWeighting & 0.955 & 0.972 \\
+2 & 3 & 1 & EuclideanDistance & MajorityClassVote & ReliefFWeighting & 0.955 & 0.972 \\
+3 & 4 & 1 & ChebyshevDistance & ShepardsWorkVote & EqualWeighting & 0.948 & 0.969 \\
+4 & 5 & 1 & ChebyshevDistance & InverseDistanceWeightedVote & EqualWeighting & 0.948 & 0.969 \\
+5 & 6 & 1 & ChebyshevDistance & MajorityClassVote & EqualWeighting & 0.948 & 0.969 \\
+6 & 7 & 7 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.948 & 0.968 \\
+7 & 8 & 5 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 0.948 & 0.968 \\
+8 & 9 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.948 & 0.967 \\
+9 & 10 & 7 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.948 & 0.967 \\
 \bottomrule
 \end{tabular}
 \end{table}
