--- a/work2/reports/tables/knn_results_mushroom.tex
+++ b/work2/reports/tables/knn_results_mushroom.tex
@@ -1,20 +1,20 @@
 \begin{table}
+\centering
 \caption{Results from KNN models for the mushroom dataset}
-\label{tab:knn_results_mushroom}
-\begin{tabular}{rrlllrr}
+\begin{tabular}{lrrlllrr}
 \toprule
- & k & distance func & voting func & weighting func & accuracy & f1 \\
+ &  & k & distance func & voting func & weighting func & accuracy & f1 \\
 \midrule
-1 & 7 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.9510 & 0.9517 \\
-2 & 5 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.9510 & 0.9517 \\
-3 & 3 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.9510 & 0.9517 \\
-4 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.9500 & 0.9509 \\
-5 & 1 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.9500 & 0.9509 \\
-6 & 1 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.9500 & 0.9509 \\
-7 & 5 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.9330 & 0.9328 \\
-8 & 7 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.9300 & 0.9291 \\
-9 & 3 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.9280 & 0.9289 \\
-10 & 3 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.9260 & 0.9267 \\
+0 & 1 & 7 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.951 & 0.952 \\
+1 & 2 & 5 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.951 & 0.952 \\
+2 & 3 & 3 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.951 & 0.952 \\
+3 & 4 & 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.950 & 0.951 \\
+4 & 5 & 1 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.950 & 0.951 \\
+5 & 6 & 1 & ManhattanDistance & ShepardsWorkVote & EqualWeighting & 0.950 & 0.951 \\
+6 & 7 & 5 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.933 & 0.933 \\
+7 & 8 & 7 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.930 & 0.929 \\
+8 & 9 & 3 & ManhattanDistance & InverseDistanceWeightedVote & EqualWeighting & 0.928 & 0.929 \\
+9 & 10 & 3 & ManhattanDistance & MajorityClassVote & EqualWeighting & 0.926 & 0.927 \\
 \bottomrule
 \end{tabular}
 \end{table}
