fill work2/reports/03-methods/03.3-methods-svm.tex, add bibliography

--- a/work2/reports/report.tex
+++ b/work2/reports/report.tex
@@ -4,6 +4,8 @@
 \usepackage{booktabs}
 \usepackage{array}
 \usepackage{hyperref}
+\bibliographystyle{plain}
+
 
 % TODO: Add any additional packages needed for the report
 % TODO: Consider adding a table of contents with \tableofcontents
@@ -26,5 +28,5 @@
 
 % TODO: Add references section
 % TODO: Consider adding appendices if necessary
-
+\bibliography{references}
 \end{document}
