hide index in tables

--- a/work2/reports/tables/svm_results_hepatitis.tex
+++ b/work2/reports/tables/svm_results_hepatitis.tex
@@ -1,20 +1,20 @@
 \begin{table}
 \centering
 \caption{Results from SVM models for the hepatitis dataset}
-\begin{tabular}{lrrlrr}
+\begin{tabular}{rrlrr}
 \toprule
- &  & C & kernel type & accuracy & f1 \\
+ & C & kernel type & accuracy & f1 \\
 \midrule
-0 & 1 & 7 & rbf & 0.955 & 0.972 \\
-1 & 2 & 3 & rbf & 0.948 & 0.968 \\
-2 & 3 & 5 & rbf & 0.948 & 0.968 \\
-3 & 4 & 1 & poly & 0.948 & 0.968 \\
-4 & 5 & 3 & poly & 0.948 & 0.967 \\
-5 & 6 & 5 & poly & 0.948 & 0.967 \\
-6 & 7 & 7 & poly & 0.948 & 0.967 \\
-7 & 8 & 1 & rbf & 0.903 & 0.941 \\
-8 & 9 & 3 & linear & 0.890 & 0.929 \\
-9 & 10 & 1 & linear & 0.884 & 0.927 \\
+1 & 7 & rbf & 0.955 & 0.972 \\
+2 & 3 & rbf & 0.948 & 0.968 \\
+3 & 5 & rbf & 0.948 & 0.968 \\
+4 & 1 & poly & 0.948 & 0.968 \\
+5 & 3 & poly & 0.948 & 0.967 \\
+6 & 5 & poly & 0.948 & 0.967 \\
+7 & 7 & poly & 0.948 & 0.967 \\
+8 & 1 & rbf & 0.903 & 0.941 \\
+9 & 3 & linear & 0.890 & 0.929 \\
+10 & 1 & linear & 0.884 & 0.927 \\
 \bottomrule
 \end{tabular}
 \end{table}
