add labels to tables

--- a/work2/notebooks/1.0-ZachParent-explore_results.ipynb
+++ b/work2/notebooks/1.0-ZachParent-explore_results.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,6 @@
     "    # s.clear()\n",
     "    s.table_styles = []\n",
     "    s.caption = caption\n",
-    "    s.label = f\"tab:{filename}\"\n",
     "    s.format(\n",
     "        precision=3,\n",
     "    )\n",
@@ -53,6 +52,7 @@
     "    latex_table = s.to_latex(position_float=\"centering\",\n",
     "                             multicol_align=\"|c|\",\n",
     "                             hrules=True,\n",
+    "                             label=f\"tab:{filename}\",\n",
     "                             )\n",
     "    with open(f\"../reports/tables/{filename}.tex\", \"w\") as f:\n",
     "        f.write(latex_table)"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
