--- a/work2/reports/04-results-and-analysis/04.2.3-discussion-svm.tex
+++ b/work2/reports/04-results-and-analysis/04.2.3-discussion-svm.tex
@@ -1,8 +1,7 @@
 \subsubsection{Support Vector Machines (SVM) Analysis}
 \label{subsubsec:discussion-svm}
 
-This section interprets the results of the SVM algorithm, discussing its performance and implications.
-
+As seen in \autoref{tab:svm_results_hepatitis}, SVMs performed well on the hepatitis dataset, achieving high accuracy and F1 scores.
 % TODO: Summarize the performance metrics of SVM (e.g., accuracy, precision, recall)
 % TODO: Compare SVM results with other methods used in the study
 % TODO: Discuss the impact of different kernel functions and hyperparameters
