--- a/work2/reports/tables/knn_results_hepatitis.tex
+++ b/work2/reports/tables/knn_results_hepatitis.tex
@@ -1,6 +1,7 @@
 \begin{table}
 \centering
 \caption{Results from KNN models for the hepatitis dataset}
+\label{tab:knn_results_hepatitis}
 \begin{tabular}{rrlllrr}
 \toprule
  & k & distance func & voting func & weighting func & accuracy & f1 \\
