--- a/work2/reports/tables/svm_results_hepatitis.tex
+++ b/work2/reports/tables/svm_results_hepatitis.tex
@@ -1,6 +1,7 @@
 \begin{table}
 \centering
 \caption{Results from SVM models for the hepatitis dataset}
+\label{tab:svm_results_hepatitis}
 \begin{tabular}{rrlrr}
 \toprule
  & C & kernel type & accuracy & f1 \\
