--- a/work2/reports/tables/svm_results_mushroom.tex
+++ b/work2/reports/tables/svm_results_mushroom.tex
@@ -1,6 +1,7 @@
 \begin{table}
 \centering
 \caption{Results from SVM models for the mushroom dataset}
+\label{tab:svm_results_mushroom}
 \begin{tabular}{rrlrr}
 \toprule
  & C & kernel type & accuracy & f1 \\
