--- a/work2/reports/tables/knn_reduction_results_hepatitis.tex
+++ b/work2/reports/tables/knn_reduction_results_hepatitis.tex
@@ -1,6 +1,7 @@
 \begin{table}
 \centering
 \caption{Results from KNN models for the hepatitis dataset with dimensionality reduction}
+\label{tab:knn_reduction_results_hepatitis}
 \begin{tabular}{rrlrrrrr}
 \toprule
  & k & reduction func & accuracy & f1 & train time & test time & storage \\
